# generalized-elias-fano

./: .gitignore  BENCHMARK_DATA_GUIDE.md  BENCHMARK_FIX_SUMMARY.md  BENCHMARK_WORKFLOW.md  CMakeLists.txt  CNAME  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  LICENSE  Makefile  OPENMP_BENCHMARKS.md  README.md  SUX_BITVECTOR_IMPLEMENTATION.md  build_project_for_benchmarks.py  index.html  plot_benchmarks.sh  run_benchmarks.sh  run_block_size_benchmark.sh  run_ratio_throughput.sh  test_openmp.cpp  test_simd  test_simd.cpp  toolchain_x86_64_musl.cmake  validate_benchmark_json.sh
.github/workflows/: build-linux.yml
bench-output/: AP_no_omp.json  AP_with_omp.json  BM_no_omp.json  BM_with_omp.json  BP_no_omp.json  BP_with_omp.json  BT_no_omp.json  BT_with_omp.json  BW_no_omp.json  BW_with_omp.json  CT_no_omp.json  CT_with_omp.json  DP_no_omp.json  DP_with_omp.json  DU_no_omp.json  DU_with_omp.json  ECG_no_omp.json  ECG_with_omp.json  GE_no_omp.json  GE_with_omp.json  IT_no_omp.json  IT_with_omp.json  LAT_no_omp.json  LAT_with_omp.json  LON_no_omp.json  LON_with_omp.json  UK_no_omp.json  UK_with_omp.json  US_no_omp.json  US_with_omp.json  WD_no_omp.json  WD_with_omp.json
benchmark_results/: AP.json  BM.json  BP.json  BT.json  BW.json  CT.json  DP.json  DU.json  ECG.json  GE.json  IT.json  LAT.json  LON.json  UK.json  US.json  WD.json
benchmark_results/benchs_mt/: B_GEF.json  B_GEF_APPROXIMATE.json  B_STAR_GEF.json  B_STAR_GEF_APPROXIMATE.json  RLE_GEF.json  U_GEF.json  U_GEF_APPROXIMATE.json
benchmark_results/benchs_st/: B_GEF.json  B_GEF_APPROXIMATE.json  B_STAR_GEF.json  B_STAR_GEF_APPROXIMATE.json  RLE_GEF.json  U_GEF.json  U_GEF_APPROXIMATE.json
benchmark_results/block_size/: AP.json  BM.json  BP.json  BT.json  BW.json  CT.json  DP.json  DU.json  ECG.json  GE.json  IT.json  LAT.json  LON.json  UK.json  US.json  WD.json
benchmarks/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bench_compression.cpp  bench_decompression.cpp  bench_multithread_scalability.cpp  bench_partition_size_trade_off.cpp  bench_partition_size_tradeoff.cpp  bench_random_access.cpp  benchmark_utils.hpp  block_size_benchmark.cpp  compression_benchmark.cpp  simple_benchmark.cpp  single_thread_compression_throughput.cpp  single_thread_decompression_throughput.cpp  single_thread_random_access_latency.cpp
cmake/: gefConfig.cmake.in
compression_metrics_results/: AP_no_omp_temp.json  dummy_no_omp.json
examples/: CMakeLists.txt  basic_usage.cpp  debug_repro.cpp  graph_example.cpp
include/datastructures/: IBitVector.hpp  IBitVectorFactory.hpp  PastaBitVector.hpp  PastaBitVectorFactory.hpp  PastaOptimizedRankSelect.hpp  SDSLBitVector.hpp  SDSLBitVectorFactory.hpp  SUXBitVector.hpp  SUXBitVectorFactory.hpp
include/gef/: B_GEF.hpp  B_GEF_NO_RLE.hpp  B_GEF_STAR.hpp  B_STAR_GEF.hpp  CompressionProfile.hpp  FastBitWriter.hpp  FastUnaryDecoder.hpp  FastZeroTerminatedDecoder.hpp  IGEF.hpp  MyEF.hpp  NoRandomAccess.hpp  RLE_GEF.hpp  U_GEF.hpp  UniformPartitioning.hpp  UniformedPartitioner.hpp  gap_computation_utils.hpp  gef.hpp  simd_utils.hpp  utils.hpp
include/graphs/: GEF_AdjList.hpp  GEF_Graph.hpp  GraphPreprocessor.hpp  U_GEF_AdjList.hpp
latex_tables/: competitors.tex  table_compression_ratio.tex  table_compression_throughput.tex  table_decompression_throughput.tex  table_random_access.tex
plots/: README.md
scripts/: bench_tables.py  bin_min_max.py  competitor_data.py  measure_throughput_no_omp.sh  plot_compression_analysis.py  plot_partition_size_tradeoff.py  plot_partition_size_tradeoff.sh  plot_tradeoff_scatter.py  run_tradeoff_benchmarks.sh
src/: CMakeLists.txt  Makefile  bgef.cpp  bgef_no_rle.cpp  gef.cpp  graph_compress.cpp  lcp.cpp  rle_gef.cpp  ugef.cpp  utils.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  b_zero_test.cpp  gef_test.cpp  gef_test_utils.hpp  get_elements_test.cpp  graph_test.cpp  overhead_test.cpp  random_access_disabled_test.cpp  simple_test.cpp  split_point_strategy_comparison_test.cpp  split_point_strategy_dataset_test.cpp  split_point_strategy_test.cpp  split_point_utils.hpp  test_pasta_bitvector.cpp  test_sdsl_bitvector.cpp  test_sux_bitvector.cpp
